changed title to Title

--- a/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListLogs.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListLogs.cshtml
@@ -9,7 +9,7 @@
 	@Html.AntiForgeryToken()
 
 	<div class="section-header">
-		<div class="title">
+		<div class="Title">
 			<i class="fa fa-fire"></i>
 			@T("Admin.Configuration.ActivityLog.ActivityLog")
 		</div>
